[Feat] Minio 파일관리를 통한 확장 프로그램 관리 시스템 업데이트